--- a/TheMobileDetailingGuys/TheMobileDetailingGuys/assets/css/About-Us.css
+++ b/TheMobileDetailingGuys/TheMobileDetailingGuys/assets/css/About-Us.css
@@ -1,10 +1,8 @@
 .container h1{
-    font-size: 48px;
-    font-family: Helvetica;
-    text-align: left;
-    padding: 20px 0;
-    margin-left: 7.5%;
-    margin-right: 1.5%;
+    color: #000000;
+    font-size: 22px;
+    text-align: center;
+    font-style: italic;
 }
 
 .container h2{
@@ -41,9 +39,31 @@
     
 }
 
-.container h3{
+.button02{
+    
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color,border-color,color,box-shadow,filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 2px;
+    min-width: 160px;
+    text-transform: uppercase;
+    white-space: normal;
+    font-weight: 700;
     text-align: center;
-    font-size: 24px;
-    margin-left: 7.5%;
-    margin-right: 1.5%;
-}
+    padding: 16px 14px 18px;
+    color: #ffffff;
+    box-shadow: inset 0 0 0 2px #ffffff;
+    background-color: transparent;
+    height: 48px;
+    :hover{
+        color: #fff;
+        background-color: #ffffff;
+    }
+
+                    }
