--- a/webDevelopmentSite/client/src/components/contact page/contact form/ContactForm.css
+++ b/webDevelopmentSite/client/src/components/contact page/contact form/ContactForm.css
@@ -18,6 +18,7 @@ form {
   }
   
   /* Input Fields */
+  form input[type="tel"],
   form input[type="text"],
   form input[type="email"],
   form textarea {
