--- a/webDevelopmentSite/client/src/components/header/Header.css
+++ b/webDevelopmentSite/client/src/components/header/Header.css
@@ -1,52 +1,50 @@
 /* Header CSS */
-
 .header {
-    overflow: hidden;
-    background-color: #08f;
-    padding: 10px 10px;
-    
-  }
-  
-  .header img {
-    width: 120px;
-  }
-  
-  .header a {
-    float: left;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 20px;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 30px;
-    border-radius: 4px;
-  }
-  
-  .header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-    padding: 0 !important;
-  }
-  
-  
-  .header-right {
-    float: right;
-    display: flex;
-    align-items: center;
-  }
-  
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%
-  }
-  
-  .sticky + .content {
-    padding-top: 102px;
-  }
-  
-  .header
-  {
-      /* ... */
-      z-index: 99;
-  }
+  overflow: hidden;
+  background-color: #08f;
+  padding: 10px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header img {
+  width: 120px;
+}
+
+.header a {
+  color: #fff;
+  text-align: center;
+  padding: 10px 15px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 30px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.header a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+  padding: 0 !important;
+}
+
+.header-right {
+  display: flex;
+  gap: 15px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+.sticky + .content {
+  padding-top: 102px;
+}
